fix: replace wrapper execution with native runner gradle